k8s/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: monitoring
  labels:
    app: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gotify-data
              mountPath: "/app/data"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-synology
